Moving MaxPermSize settings to gradle.properties